# visensor_simulator

./: CMakeLists.txt  README.md  package.xml  setup.py
include/visensor_simulator/: builtin_planner.h  logger.h  ros_backend_node.h  simple_waypoint_planner.h
launch/: depth_image_to_ply_files.launch  depth_image_to_point_cloud.launch  extern_backend.launch  ros_backend.launch  spawn_mav_with_noise.launch  uav_vi_blender.launch  waypoint_planner.launch  waypoints.txt
resources/: firefly_with_vi_sensor_no_cameras.gazebo  gimbal_snippets.xacro  mav_with_odom_and_vi_sensor_and_gimbal_no_cameras.gazebo  mav_with_odom_and_vi_sensor_no_cameras.gazebo  neo11_vi_sensor_no_cameras.gazebo  project_test.tar  waypoints.txt
scripts/: bagcreator_lite.py  blender_camera_file_import.py  blender_debug.py  blender_enable_addon.py  blender_render_no_gui.py  blender_visensor_sim_tool.py  blender_visensor_sim_tool_lite.py  exr_compression_remover.py  kalibr_bagcreator.py  rename_blender_frames.py  render_panel.py  visensor_sim_bagcreator.py  waypoints_zigzag_generator.py
scripts/blender/: blender_enable_addon.py  blender_render_no_gui.py  visensor_sim_blender_addon.py
scripts/matlab/: sample_polygon.txt  scanpattern.m
scripts/waypoint_generators/: waypoints_gsd_zigzag_generator.py  waypoints_zigzag_generator.py
src/: extern_planner_backend.cc  gazebo_poltergeist_gimbal_plugin.cpp  main.cc  ros_backend_node.cc  simple_planner_backend.cc  simple_waypoint_planner.cc  waypoint_planner.cc
